--- a/Second Year/Second Semester/Web Programming/8/frontend/src/app/page-header/page-header.component.html
+++ b/Second Year/Second Semester/Web Programming/8/frontend/src/app/page-header/page-header.component.html
@@ -5,7 +5,7 @@
 
     @if (this.authService.getFromLocalStorage("logged_in") == "true" && this.authService.getFromLocalStorage("elevation") == "1") {
         <div class="my-auto ml-auto">
-            <a class="text-2xl text-emerald-400 my-auto hover:underline" href="/article/write"> Write an article </a>
+            <a class="text-2xl text-emerald-400 my-auto hover:underline" href="/write-article"> Write an article </a>
         </div>
     }
 
