--- a/Second Year/Second Semester/Web Programming/8/frontend/src/app/news-list/news-list.component.html
+++ b/Second Year/Second Semester/Web Programming/8/frontend/src/app/news-list/news-list.component.html
@@ -8,7 +8,7 @@
         <div class="text-sm"> By {{ news.Producer.Username }} </div>
     </div>
 } @empty {
-    <div class="text-center text-3xl my-4">
+    <div class="text-center text-3xl mb-4 pt-8">
         No news found
     </div>
 }
